<resources>
    <string name="app_name">Ringly</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">abc@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_tools">Notification</string>
    <string name="menu_share">Share</string>
    <string name="menu_info">Information</string>
    <string name="log_out">Logout</string>
    <string name="log_in">LogIn</string>


    <!--<string name="facebook_application_id" translatable="false">389125072113450</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb389125072113450</string>-->
    <string name="facebook_application_id">204728621794596</string>
    <string name="facebook_login_protocol_scheme">fb204728621794596</string>

    <string name="fui_progress_dialog_signing_up">Creating your shiny new account...</string>


    <string name="search">Search</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="rate_title">Rate This App</string>
    <string name="rate_message">Give us your feedback..</string>
    <string name="rate_positive">Rate Positive</string>
    <string name="rate_remind_later">Remind Me Later</string>
    <string name="rate_never">Never</string>
    <string name="string_not_signed_in">Oops! You have to sign in first...</string>
    <string name="logout">Logout</string>
    <string name="preference_file_name">ringtone_shared_pref</string>
    <string name="couldnot_create_file">Coundn\'t create file</string>
    <string name="content_size_invalid">Content size invalid</string>
    <string name="memory_is_not_there_to_download_the_videos">memory is not there to download the videos</string>
    <string name="insufficient_memory">Insufficient memory</string>
    <string name="couldnot_connect_to_server" />
    <string name="down_prog">Download in progress</string>
    <string name="down_comp">Download complete</string>
    <string name="data_downloading">"Data Downloading</string>
    <string name="set_as_contact_ringtone">Set as contact ringtone</string>
    <string name="set_as_alarm_tone">Set as alarm tone</string>
    <string name="set_as_ringtone">Set as ringtone</string>
    <string name="download_ringtone">Download ringtone</string>
    <string name="sign_up_free">Sign Up Free</string>
    <string name="oops_check_your_internet_and_press_retry">OOPS Check your Internet and press retry</string>
    <string name="recent_photos">Recent Photos</string>
    <string name="note_to_get_the_best_quality_download_and_then_set_as_wallpaper">Note: To get the best quality download and then set as Wallpaper</string>
    <string name="click_to_view_more">Click to View More</string>
    <string name="wallpapers">Wallpapers</string>

    <!--<string name="facebook_app_id">2548732155358176</string>
    <string name="fb_login_protocol_scheme">fb2548732155358176</string>-->
    <string name="facebook_app_id">204728621794596</string>
    <string name="fb_login_protocol_scheme">fb204728621794596</string>
    <string name="sign_up">Sign Up</string>
    <string name="next">Next</string>
    <string name="enter_mobile_no">Enter Mobile No.</string>
    <string name="or_connect_with">Or connect with</string>
    <string name="terms_of_services_and_privacy_policy">Terms of Services and Privacy Policy</string>
    <string name="todo">TODO</string>
    <string name="set_as">Set as</string>
    <string name="share">Share</string>
    <string name="like">Like</string>
    <string name="download">Download</string>
    <string name="file_selected">File Selected</string>


    <!-- TODO: Remove or change this placeholder text -->


</resources>
