<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/rlParent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fui_bgGitHub"
    tools:ignore="MissingDefaultResource">

    <RelativeLayout
        android:id="@+id/songToolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/transparent">
        <ImageView
            android:layout_marginLeft="20dp"
            android:padding="5dp"
            android:background="@drawable/ic_back"
            android:layout_centerVertical="true"
            android:id="@+id/ivBack"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textAlignment="center"
            android:layout_marginStart="100dp"
            android:textSize="18sp"
            android:layout_centerVertical="true"
            android:textColor="@android:color/white"
            android:id="@+id/tvTitle"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:visibility="visible"
        android:id="@+id/rlMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/songToolbar"
        android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_View"
                android:layout_alignParentBottom="true"
                android:gravity="bottom|center_horizontal">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/ivOptions"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/roundbutton"
                        android:padding="15dp"
                        android:src="@drawable/ic_mode_edit_black_24dp" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/ivFavourite"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/roundbutton"
                        android:padding="15dp"
                        android:src="@drawable/ic_fav_unselected" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/ivShare"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/roundbutton"
                        android:padding="15dp"
                        android:src="@drawable/ic_share_black_24dp" />


                </RelativeLayout>

            </LinearLayout>


        </RelativeLayout>

    <RelativeLayout
            android:id="@+id/rlOptions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent1"
            android:visibility="gone">

            <LinearLayout
                android:layout_marginStart="85dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/llSetAsContactRingtone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_margin="10dp"
                        android:backgroundTint="@color/black"
                        android:src="@drawable/ic_rcontact"
                        app:borderWidth="0dp"
                        app:elevation="6dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/set_as_contact_ringtone"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llSetAsAlarmTone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fabAlarmRingtone"
                        android:layout_width="58dp"
                        android:layout_height="58dp"
                        android:layout_margin="10dp"
                        android:backgroundTint="@color/black"
                        android:src="@drawable/ic_alarm"
                        app:borderWidth="0dp"
                        app:elevation="6dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/set_as_alarm_tone"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llSetAsRingtone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fabRingtone"
                        android:layout_width="61dp"
                        android:layout_height="61dp"
                        android:layout_margin="10dp"
                        android:backgroundTint="@color/black"
                        android:src="@drawable/ic_set_ringtone"
                        app:borderWidth="0dp"
                        app:elevation="6dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/set_as_ringtone"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llDownloadRingtone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fabDownload"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_margin="10dp"
                        android:backgroundTint="@color/black"
                        android:src="@drawable/ic_download"
                        app:borderWidth="0dp"
                        app:elevation="6dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/download_ringtone"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                </LinearLayout>


            </LinearLayout>

        </RelativeLayout>



</RelativeLayout>