<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/black">

    <RelativeLayout
        android:background="@color/transparent"
        android:id="@+id/songToolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <ImageView
            android:layout_marginLeft="20dp"
            android:padding="5dp"
            android:background="@drawable/ic_back"
            android:layout_centerVertical="true"
            android:id="@+id/ivBack"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="20sp"
            android:layout_centerVertical="true"
            android:textColor="@android:color/white"
            android:text="Wallpaper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/detailImg"
            android:layout_weight=".7"
            android:scaleType="centerCrop"/>

        <com.truizlop.fabreveallayout.FABRevealLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".3"
            android:id="@+id/fablayout">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="56dp"
                android:layout_height="56dp"
                app:backgroundTint="#212121"
                android:src="@drawable/download"
                android:scaleType="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:visibility="visible"
                android:orientation="vertical"
                android:elevation="4dp"
                android:background="@android:color/black"
                android:layout_weight="1.5">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/user"
                    android:text="username"
                    android:textColor="#fff"
                    android:layout_margin="3dp"
                    android:gravity="center"
                    android:textStyle="bold"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_place_black_24dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/location"
                        android:text="location"
                        android:layout_margin="3dp"
                        android:gravity="center"
                        android:textColor="#fff"/>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:background="#88000000"

                        />

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:src="@drawable/ic_language_black_24dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="Unsplash.com"
                        android:textColor="@color/white"
                        android:layout_margin="3dp" />
                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="14dp"
                        android:layout_weight=".7">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:text="Views"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="views"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:id="@+id/viewTxt"
                            android:layout_gravity="center"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="14dp"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:text="Downloads"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="downloads"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:id="@+id/downloadTxt"
                            android:layout_gravity="center"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="14dp"
                        android:layout_weight=".9">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:text="Likes"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="likes"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:id="@+id/likeTxt"
                            android:layout_gravity="center"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:elevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:elevation="5dp">

                    <LinearLayout
                        android:background="?android:attr/selectableItemBackground"
                        android:id="@+id/setBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="5dp"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:src="@drawable/set"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/set_as"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            android:layout_gravity="center"
                            android:theme="@style/PrimaryFlatButton"/>

                    </LinearLayout>

                    <LinearLayout
                        android:background="?android:attr/selectableItemBackground"
                        android:id="@+id/shareBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="5dp"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:src="@drawable/ic_share_black_24dp"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/share"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            android:layout_gravity="center"
                            android:theme="@style/PrimaryFlatButton"/>

                    </LinearLayout>

                    <LinearLayout
                        android:background="?android:attr/selectableItemBackground"
                        android:id="@+id/favBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="5dp"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:id="@+id/favWall"
                            android:layout_marginTop="13dp"
                            android:src="@drawable/ic_favorite_border_black_24dp"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/like"
                            android:layout_gravity="center"
                            android:textSize="16sp"
                            android:textColor="@android:color/white"
                            android:theme="@style/PrimaryFlatButton"/>

                    </LinearLayout>

                    <LinearLayout
                        android:background="?android:attr/selectableItemBackground"
                        android:id="@+id/downloadBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="5dp"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:src="@drawable/download"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/download"
                            android:layout_gravity="center"
                            android:textSize="16sp"
                            android:textColor="@android:color/white"
                            android:theme="@style/PrimaryFlatButton"/>

                    </LinearLayout>

                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/xBtn"
                    android:src="@drawable/back"
                    android:layout_gravity="bottom|center"
                    android:layout_margin="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom|center_horizontal"
                    android:layout_marginTop="10dp"
                    >

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:id="@+id/alertImg"
                        android:layout_gravity="center"
                        android:layout_margin="3dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/note_to_get_the_best_quality_download_and_then_set_as_wallpaper"
                        android:layout_gravity="center"
                        android:textSize="10dp"
                        android:textColor="@android:color/white"
                        android:layout_margin="3dp"/>

                </LinearLayout>

            </LinearLayout>

        </com.truizlop.fabreveallayout.FABRevealLayout>


    </LinearLayout>






</LinearLayout>